--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "axios": "^0.19.0",
         "botbuilder": "~4.5.1",
         "dotenv": "~8.0.0",
+        "msal": "^1.1.3",
         "request": "^2.88.0",
         "restify": "~8.3.3"
     },
