--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "dependencies": {
         "botbuilder": "~4.5.1",
         "dotenv": "~8.0.0",
+        "node-fetch": "^2.6.1",
+        "qs": "^6.10.1",
         "request": "^2.88.0",
         "restify": "~8.3.3"
     },
@@ -28,6 +30,6 @@
         "eslint-plugin-node": "^9.1.0",
         "eslint-plugin-promise": "^4.2.1",
         "eslint-plugin-standard": "^4.0.0",
-        "nodemon": "~1.19.1"
+        "nodemon": "^2.0.7"
     }
 }
